fixed spacing on date posted

--- a/app/assets/stylesheets/news.scss
+++ b/app/assets/stylesheets/news.scss
@@ -56,6 +56,10 @@
   font-size: 1rem;
 }
 
+.dateNewsPosted { 
+  font-size: 1rem;
+}
+
 .img-news-post {
   height: 200px;
   width: 200px;
